add_executable(filetransfer_download1 download1.cc)
target_link_libraries(filetransfer_download1 ideal_net ideal_base pthread)

add_executable(filetransfer_download2 download2.cc)
target_link_libraries(filetransfer_download2 ideal_net ideal_base pthread)

add_executable(filetransfer_download3 download3.cc)
target_link_libraries(filetransfer_download3 ideal_net ideal_base pthread)

